Bad copy constructor in StyleRareNonInheritedData https://bugs.webkit.org/show_bug.cgi?id=98950

Patch by Rik Cabanier <cabanier@adobe.com> on 2012-10-11
Reviewed by Eric Seidel.

Typo in copy constructor caused blendmode to always be the default.

Source/WebCore:

* rendering/style/StyleRareNonInheritedData.cpp:
(WebCore::StyleRareNonInheritedData::StyleRareNonInheritedData):

LayoutTests:

* platform/chromium/TestExpectations:
* transitions/blendmode-transitions-expected.txt: Added.
* transitions/blendmode-transitions.html: Added.
* transitions/resources/transition-test-helpers.js:
* transitions/svg-transitions-expected.txt:

Canonical link: https://commits.webkit.org/117115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131146 268f45cc-cd09-0410-ab3c-d52691b4dbfc